# opencc-rs

./: .gitignore  .gitmodules  .justfile  .pre-commit-config.yaml  .prekignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  cliff.toml  codecov.yml  commitlint.config.cjs  deny.toml  release-plz.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  check.yml  clippy.yml  commitlint.yml  coverage.yml  deny.yml  fmt.yml  outdated.yml  publish.yml  release-plz.yml  test.yml  udeps.yml
examples/: main.rs
opencc-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  wrapper.h
opencc-sys/src/: lib.rs
opencc-sys/src/assets/: HKVariantsRevPhrases.ocd2  JPVariants.ocd2  JPVariantsRev.ocd2  STPhrases.ocd2  TSPhrases.ocd2  TWPhrases.ocd2  TWPhrasesRev.ocd2
src/: lib.rs
tests/: opencc.rs
tests/data/: jp2t2s.ans  s2t.ans  s2t.in  s2twp.ans  s2twp.in  t2s.ans  t2s.in
