[package]
name = "opencc-rs"
version = "0.3.3"
edition = "2021"
rust-version = "1.65"
license = "MIT OR Apache-2.0"
authors = ["Terakomari <im.terakomari@icloud.com>"]
repository = "https://github.com/novel-rs/opencc-rs"
homepage = "https://github.com/novel-rs/opencc-rs"
documentation = "https://docs.rs/opencc-rs"
description = "OpenCC bindings for Rust"
readme = "README.md"
keywords = ["opencc", "chinese", "traditional"]
categories = ["api-bindings", "localization"]

[workspace]
resolver = "2"
members = ["opencc-sys", "."]

[dependencies]
opencc-sys = { version = "0.2.0", path = "opencc-sys" }

# https://github.com/rust-lang/libc
libc = { version = "0.2.153", default-features = false, features = ["std"] }
# https://github.com/Stebalien/tempfile
tempfile = { version = "3.10.1", default-features = false }
# https://github.com/dtolnay/thiserror
thiserror = { version = "1.0.59", default-features = false }

[dev-dependencies]
# https://github.com/rust-pretty-assertions/rust-pretty-assertions
pretty_assertions = { version = "1.4.0", default-features = false, features = [
  "std",
] }
