[package]
name = "opencc-rs"
version = "0.4.11"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Terakomari <im.terakomari@icloud.com>"]
repository = "https://github.com/novel-rs/opencc-rs"
homepage = "https://github.com/novel-rs/opencc-rs"
documentation = "https://docs.rs/opencc-rs"
description = "OpenCC bindings for Rust"
readme = "README.md"
keywords = ["opencc", "chinese", "traditional"]
categories = ["api-bindings", "localization"]

[workspace]
resolver = "3"
members = ["opencc-sys", "."]

[dependencies]
opencc-sys = { version = "0.3.8", path = "opencc-sys" }

# https://github.com/rust-lang/libc
libc = { version = "0.2.178", default-features = false, features = ["std"] }
# https://github.com/Stebalien/tempfile
tempfile = { version = "3.24.0", default-features = false, features = [
  "getrandom",
] }
# https://github.com/dtolnay/thiserror
thiserror = { version = "2.0.17", default-features = false, features = ["std"] }

[dev-dependencies]
# https://github.com/rust-pretty-assertions/rust-pretty-assertions
pretty_assertions = { version = "1.4.1", default-features = false, features = [
  "std",
] }
# https://github.com/wiktor-k/testresult
testresult = { version = "0.4.1", default-features = false }
