[package]
name = "opencc-sys"
version = "0.1.9+1.1.7"
edition = "2021"
rust-version = "1.60"
license = "MIT OR Apache-2.0"
authors = ["Terakomari <im.terakomari@icloud.com>"]
repository = "https://github.com/novel-rs/opencc-rs"
homepage = "https://github.com/novel-rs/opencc-rs"
documentation = "https://docs.rs/opencc-sys"
description = "OpenCC bindings for Rust"
readme = "README.md"
keywords = ["opencc", "chinese", "traditional"]
categories = ["external-ffi-bindings"]
links = "opencc"
build = "build.rs"

[dependencies]
# https://github.com/dtolnay/link-cplusplus
link-cplusplus = { version = "1.0.9", default-features = false }
# https://github.com/matklad/once_cell
once_cell = { version = "1.19.0", default-features = false, features = ["std"] }

[build-dependencies]
# https://github.com/rust-lang/cmake-rs
cmake = { version = "0.1.50", default-features = false }
# https://github.com/rust-lang/rust-bindgen
bindgen = { version = "0.69.4", default-features = false, features = [
  "logging",
  "prettyplease",
  "runtime",
  "which-rustfmt",
] }
