[package]
name = "opencc-sys"
version = "0.3.8+1.1.9"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Terakomari <im.terakomari@icloud.com>"]
repository = "https://github.com/novel-rs/opencc-rs"
homepage = "https://github.com/novel-rs/opencc-rs"
documentation = "https://docs.rs/opencc-sys"
description = "OpenCC bindings for Rust"
readme = "README.md"
keywords = ["opencc", "chinese", "traditional"]
categories = ["external-ffi-bindings"]
links = "opencc"
build = "build.rs"

[dependencies]
# https://github.com/dtolnay/link-cplusplus
link-cplusplus = { version = "1.0.12", default-features = false }

[build-dependencies]
# https://github.com/rust-lang/cmake-rs
cmake = { version = "0.1.54", default-features = false }
# https://github.com/rust-lang/rust-bindgen
bindgen = { version = "0.72.1", default-features = false, features = [
  "runtime",
] }
